--- a/css/stage.css
+++ b/css/stage.css
@@ -4,9 +4,14 @@ html,body{
     margin: 0;
     padding: 0;
 
+    overflow: hidden;
+}
+
+body{
     position: relative;
 
-    overflow: hidden;
+    background-size: cover;
+    background-image: url(bg-night.png);
 }
 
 #client-messages{
