--- a/css/main.css
+++ b/css/main.css
@@ -9,15 +9,23 @@ html,body{
 
 body{
     position: relative;
-
-    background-image: url(stars.jpg);
 }
 
 canvas{
     width: 100%;
     height: 100%;
 
+    background-image: url(stars.jpg);
+
     -webkit-transform: translateZ(0);
+
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+}
+
+body[data-state='ready'] canvas{
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
 }
 
 #loading-indicator{
@@ -25,7 +33,7 @@ canvas{
     height: 20px;
 
     position: absolute;
-    z-index: 100;
+    z-index: 200;
     left: 50%;
     top: 50%;
 
@@ -49,7 +57,7 @@ body[data-state='ready'] #loading-indicator{
     height: 20px;
 
     position: absolute;
-    z-index: 100;
+    z-index: 200;
     left: 50%;
     top: 55%;
 
@@ -79,52 +87,4 @@ body[data-state='socket error'] #state-indicator,
 body[data-state='socket connect error'] #state-indicator,
 body[data-state='disconnected'] #state-indicator{
     pointer-events: auto;
-}
-
-#joystick{
-    width: 100px;
-    height: 100px;
-
-    position: absolute;
-
-    opacity: 0;
-
-    transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-
-    transition: opacity 500ms ease-in-out;
-    -webkit-transition: opacity 500ms ease-in-out;
-
-    background-color: #434343;
-
-    border-radius: 50%;
-}
-
-#joystick span{
-    width: 40%;
-    height: 40%;
-    margin: 10%;
-
-    position: absolute;
-
-    transform: translateX(50%) translateY(50%);
-    -webkit-transform: translateX(50%) translateY(50%);
-
-    background-color: #434343;
-
-    border-radius: 50%;
-}
-
-#joystick[data-active='1']{
-    opacity: 0.6;
-}
-
-.metal {
-    box-shadow: #111111 0px 0px 10px;
-    background-image: -webkit-radial-gradient(  50%   0%,  8% 50%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),                        -webkit-radial-gradient(  50% 100%, 12% 50%, hsla(0,0%,100%,.6) 0%, hsla(0,0%,100%,0) 100%),                        -webkit-radial-gradient(   0%  50%, 50%  7%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),                        -webkit-radial-gradient( 100%  50%, 50%  5%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),                                                -webkit-repeating-radial-gradient(    50% 50%, 100% 100%, hsla(0,0%,  0%,0) 0%, hsla(0,0%,  0%,0)   3%, hsla(0,0%,  0%,.1) 3.5%),                        -webkit-repeating-radial-gradient(    50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0)   6%, hsla(0,0%,100%,.1) 7.5%),                        -webkit-repeating-radial-gradient(    50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%, hsla(0,0%,100%,.2) 2.2%),                                                -webkit-radial-gradient(    50% 50%, 200% 50%, hsla(0,0%,90%,1) 5%, hsla(0,0%,85%,1) 30%, hsla(0,0%,60%,1) 100%);
-}
-
-.metal span{
-    box-shadow: #111111 0px 0px 10px;
-    background-image: -webkit-radial-gradient(  50%   0%,  8% 50%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),                        -webkit-radial-gradient(  50% 100%, 12% 50%, hsla(0,0%,100%,.6) 0%, hsla(0,0%,100%,0) 100%),                        -webkit-radial-gradient(   0%  50%, 50%  7%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),                        -webkit-radial-gradient( 100%  50%, 50%  5%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),                                                -webkit-repeating-radial-gradient(    50% 50%, 100% 100%, hsla(0,0%,  0%,0) 0%, hsla(0,0%,  0%,0)   3%, hsla(0,0%,  0%,.1) 3.5%),                        -webkit-repeating-radial-gradient(    50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0)   6%, hsla(0,0%,100%,.1) 7.5%),                        -webkit-repeating-radial-gradient(    50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%, hsla(0,0%,100%,.2) 2.2%),                                                -webkit-radial-gradient(    50% 50%, 200% 50%, hsla(0,0%,90%,1) 5%, hsla(0,0%,85%,1) 30%, hsla(0,0%,60%,1) 100%);
 }
