--- a/css/touchables.css
+++ b/css/touchables.css
@@ -1,4 +1,5 @@
-body[data-keyboard-active='1']{
+/* Keyboard */
+*[data-keyboard-active='1']{
     width: 100vw;
     height: 100vh;
 
@@ -7,6 +8,10 @@ body[data-keyboard-active='1']{
     overflow: hidden;
 
     font-family: arial;
+}
+
+*[data-caps="true"]{
+    text-transform: uppercase;
 }
 
 .keyboard-wrapper{
@@ -18,7 +23,7 @@ body[data-keyboard-active='1']{
     top: 0;
 }
 
-.keyboard-container{
+.keyboard-interior{
     width: 100%;
     height: 100%;
 
@@ -26,7 +31,7 @@ body[data-keyboard-active='1']{
 }
 
 @media (orientation: portrait){
-    .keyboard-container{
+    .keyboard-interior{
         margin-top: 10%;
         height: 90%;
     }
@@ -79,7 +84,7 @@ body[data-keyboard-active='1']{
     background-color: white;
 }
 
-.keyboard-container[data-keyboard-active='1'] .keyboard-toggle{
+.keyboard-interior[data-keyboard-active='1'] .keyboard-toggle{
     opacity: 1;
 }
 
